@@ -79,6 +79,11 @@ us a note on ns-developers mailing list.</p>
 
 <h2>Changes to existing API:</h2>
 <ul>
+    <li> A change in Ipv[4,6]Interface enforces the correct behaviour of IP 
+      when a device do not support the minimum MTU requirements.
+      This is set to 68 and 1280 octects respectively.
+      This might break some simulations. However, it's the correct 
+      behaviour.</li>
     <li>A change is introduced for the usage of the EpcHelper
       class. Previously, the EpcHelper class included both the API
       definition and its (only) implementation; as such, users would
